crates/puffin_error/src/snapshots/puffin_error__compiler__tests__multiline_highlights.snap
---
source: crates/puffin_error/src/compiler.rs
expression: "error.debug_display(\"test\",\n    src.split_inclusive('\\n').enumerate().map(|l| (l.0 + 1, l.1)).collect())"
---
ERROR[0001]: unexpected symbol
--> test:3:44
3 | i am an error thats across multiple lines. haha
  |                                            ^^^^^ 
  | 
4 | hahaha
  | ^^^^^^^ 
  | 
5 | hahaha oh you got me
  | ^^^^^^ caught you
  | 

