crates/puffin_error/src/snapshots/puffin_error__compiler__tests__multiple_highlights.snap
---
source: crates/puffin_error/src/compiler.rs
expression: "error.debug_display(\"test\",\n    src.split_inclusive('\\n').enumerate().map(|l| (l.0 + 1, l.1)).collect())"
---
ERROR[0001]: unexpected symbol
--> test:1:30
1 | This shouldn't have the word potato
  |                              ~~~~~~ don't think I didn't notice
2 | potato
  | ^^^^^^ no potato >:(

