crates/puffin_error/src/snapshots/puffin_error__compiler__tests__same_line_message_not_colliding.snap
---
source: crates/puffin_error/src/compiler.rs
expression: "error.debug_display(\"test\",\n    src.split_inclusive('\\n').enumerate().map(|l| (l.0 + 1, l.1)).collect())"
---
ERROR[0001]: unexpected symbol
--> test:1:3
1 | a platypus? PERRY THE PLATYPUS?!
  |   ^^^^^^^^ gasp        ^^^^^^^^ bigger gasp
  | 

